Pluggable graph interface for Hoptimator topology + Mermaid renderer (#222)
* Add pipeline graph SPI + Mermaid renderer

Introduces the visualization framework consumed by the `!graph`
command in a follow-up commit:

- `com.linkedin.hoptimator.graph` (in hoptimator-api): GraphNode,
  GraphEdge, GraphTarget, PipelineGraph data model + GraphProvider
  and GraphRenderer SPIs.

- New `hoptimator-graph` module hosting the Mermaid renderer plus
  CronHumanizer (renders cron expressions in trigger labels as
  English via cron-utils CronDescriptor, falling through to the raw
  cron string on parse failure).

The renderer is registered via META-INF/services and discovered by
GraphService (added in the next commit).

* Add K8s graph provider with SQL identifier resolution

Hooks the graph SPI from the previous commit up to a working data
path:

- GraphService (hoptimator-jdbc): the dispatch entry point. Walks
  Calcite's schema tree to resolve a user-typed identifier
  (TWO_LEVEL.NAME or THREE_LEVEL.SCHEMA.NAME) to a GraphTarget,
  loads GraphProvider and GraphRenderer impls via ServiceLoader,
  and dispatches.

- PipelineGraphBuilder + K8sGraphProvider (hoptimator-k8s):
  direction-aware traversal of Pipeline / TableTrigger / View
  references that produces a PipelineGraph rooted at the target.

- LogicalTable detection: HoptimatorJdbcSchema.isLogical() lazily
  walks its downstream Calcite connection to spot any sub-schema
  tagged with the new LogicalSchemaMarker, so the JDBC layer can
  surface LogicalTable targets without baking driver-specific URL
  prefixes or class names into the adapter. LogicalTableSchema
  implements the marker. isLogical() lives on HoptimatorJdbcSchema
  rather than the Database SPI to keep Database a thin K8s-CRD
  surface free of planner concerns.

- GraphService resolves identifiers to MaterializedView (view),
  LogicalTable (marker hit), or Resource (everything else with a
  HoptimatorJdbcSchema backing) targets; failures throw SQLException
  